After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 745135 - xsettings: window manager settings not updated when changed
xsettings: window manager settings not updated when changed
Status: RESOLVED FIXED
Product: gnome-settings-daemon
Classification: Core
Component: xsettings
3.15.x
Other Linux
: Normal normal
: ---
Assigned To: gnome-settings-daemon-maint
gnome-settings-daemon-maint
Depends on:
Blocks:
 
 
Reported: 2015-02-24 23:34 UTC by Sebastian Keller
Modified: 2015-02-25 17:30 UTC
See Also:
GNOME target: 3.16
GNOME version: ---


Attachments
xsettings: fix some settings not being updated after recent glib change (2.47 KB, patch)
2015-02-24 23:34 UTC, Sebastian Keller
committed Details | Review

Description Sebastian Keller 2015-02-24 23:34:40 UTC
Created attachment 297840 [details] [review]
xsettings: fix some settings not being updated after recent glib change

Currently settings like org.gnome.desktop.wm.preferences.button-layout don't get updated for changes from programs like dconf-editor or gnome-tweak-tool. This is because of a GSettings change [0] that caused the "changed" signal only to be emitted if there has been a call to get_value after connecting to the signal. The xsettings plugin however is gettint the initial values before connecting to the signal and this the signal never gets emitted for some settings.
I'm attaching a patch that moves getting the initial values after connecting to the "changed" signal.

[0] https://git.gnome.org/browse/glib/commit/?id=8ff5668a458344da22d30491e3ce726d861b3619
Comment 1 Bastien Nocera 2015-02-25 17:30:34 UTC
Attachment 297840 [details] pushed as ba2c121 - xsettings: fix some settings not being updated after recent glib change