xsettings: fix some settings not being updated after recent glib change

GSettings got changed to only emit the "changed" signal after get_value
has been called at least once since connecting to the "changed" signal
in order to prevent unnecessary work in some cases. The g-s-d xsettings
plugin however was getting all values before connecting to the "changed"
signal and thus the signal was not emitted for some of the settings,
like the wm button-layout. Other settings (like the interface settings)
were fine due to additional get_value calls after setting up the signal
callback. Fix this by moving the moving the loop that gets all initial
values after the connect calls.

See also:
https://git.gnome.org/browse/glib/commit/?id=8ff5668a458344da22d30491e3ce726d861b3619

https://bugzilla.gnome.org/show_bug.cgi?id=745135